update tools to documents

--- a/Documentation/bibliography.bib
+++ b/Documentation/bibliography.bib
@@ -1,13 +1,8 @@
-@article{einstein,
-    author =       "Albert Einstein",
-    title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-        [{On} the electrodynamics of moving bodies]",
-    journal =      "Annalen der Physik",
-    volume =       "322",
-    number =       "10",
-    pages =        "891--921",
-    year =         "1905",
-    DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
+@article{emailspam,
+    author =       "Hugo Galán Asensio",
+    title =        "Inteligencia artificial.Redes neuronales y aplicaciones.",
+    journal =      "Estudiantes",
+    year =         "2010"
 }
  
 @book{IA,
@@ -23,5 +18,21 @@
     howpublished = "\url{http://sedici.unlp.edu.ar/bitstream/handle/10915/22061/Documento_completo.pdf?sequence=1}",
   year = {2017}, 
   note = "[Online; accessed 15-Octubre-2017]"
+}
+
+@misc{python,
+    author    = "Python Software Foundation",
+    title     = "The official home of the Python Programming Language",
+    howpublished = "\url{https://www.python.org/}",
+  year = {2017}, 
+  note = "[Online; accessed 16-Octubre-2017]"
+}
+
+@misc{neupy,
+    author    = "Yurii Shevchuk",
+    title     = "Python Library for Artificial Neural Networks",
+    howpublished = "\url{http://neupy.com/pages/home.html}",
+  year = {2017}, 
+  note = "[Online; accessed 16-Octubre-2017]"
 }
  
